Removed fixed width 100% as default \n Removed wrapping div from table tests

--- a/packages/table/src/sass/_module.scss
+++ b/packages/table/src/sass/_module.scss
@@ -25,45 +25,40 @@ $AU-colordark-table-row-alt: #104f5f;
 
 
 .au-table {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+    font-size: 1rem;
+    line-height: 1.5rem;
+    border-collapse: collapse;
+    border-spacing: 0;
     overflow: auto;
-    display: block;
 
-    table {
-        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-        font-size: 1rem;
-        line-height: 1.5rem;
-        border-collapse: collapse;
-        border-spacing: 0;
-        width: 100%;
-    
-        caption {
-            display: table-caption;
-            font-weight: bold;
-        }
-    
-        thead {
-            display: table-header-group;
-            border-bottom: solid 2px $AU-color-table-head-border;
-        }
-    
-        tbody {
-            display: table-row-group;
-        }
-    
-        tr {
-            display: table-row;
-        }
-    
-        th,
-        td {
-            @include AU-space( padding, 0.5unit );
-    
-            border-bottom: 1px solid $AU-color-table-row-border;
-            text-align: left;
-    
-            &:focus {
-                outline: 3px solid #C390F9;
-            }
+    caption {
+        display: table-caption;
+        font-weight: bold;
+    }
+
+    thead {
+        display: table-header-group;
+        border-bottom: solid 2px $AU-color-table-head-border;
+    }
+
+    tbody {
+        display: table-row-group;
+    }
+
+    tr {
+        display: table-row;
+    }
+
+    th,
+    td {
+        @include AU-space( padding, 0.5unit );
+
+        border-bottom: 1px solid $AU-color-table-row-border;
+        text-align: left;
+
+        &:focus {
+            outline: 3px solid #C390F9;
         }
     }
 
@@ -73,6 +68,10 @@ $AU-colordark-table-row-alt: #104f5f;
         tr:nth-child(even) {
             background-color: $AU-color-table-row-alt;
         }
+    }
+
+    &--block {
+        width: 100%;
     }
 
     &--dark {
